@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.009.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.010.
 use strict;
 use warnings;
 
@@ -19,7 +19,7 @@ my %WriteMakefileArgs = (
   "PREREQ_PM" => {
     "AnyEvent" => 0,
     "AnyEvent::Consul" => 0,
-    "Consul" => "0.021",
+    "Consul" => "0.022",
     "JSON::MaybeXS" => 0,
     "Type::Params" => 0,
     "Types::Standard" => 0,
@@ -42,7 +42,7 @@ my %WriteMakefileArgs = (
 my %FallbackPrereqs = (
   "AnyEvent" => 0,
   "AnyEvent::Consul" => 0,
-  "Consul" => "0.021",
+  "Consul" => "0.022",
   "JSON::MaybeXS" => 0,
   "Test::Consul" => 0,
   "Test::Exception" => 0,
